--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap"
     rel="stylesheet">
   <title>React Portfolio App</title>
+  <script> window.token = "{{flask_token}}"</script>
   <style>
     * {
       font-family: 'Roboto', sans-serif;
