updates to mbile

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap"
     rel="stylesheet">
-  <title>React Portfolio App</title>
+  <title>Alpha Analysis Showcase</title>
   <script> window.token = "{{flask_token}}"</script>
   <style>
     * {
